Add token symbol in frontend

--- a/src/index.html
+++ b/src/index.html
@@ -94,6 +94,7 @@
     <div id="common">
         <main>
             <hr>
+            <p>Token: <span data-behavior="ft-symbol"></span></p>
             <p>Contract: <span data-behavior="ft-contract-name"></span></p>
             <p>Number of tokens for sale: <span data-behavior="num-of-tokens"></span></p>
             <p>Start time: <span data-behavior="start-time"></span></p>
