--- a/src/index.html
+++ b/src/index.html
@@ -1,36 +1,25 @@
-<!DOCTYPE html />
-<html>
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
     <link rel="icon" href="./assets/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="apple-touch-icon" href="./assets/favicon.ico" />
     <title>Welcome to TokenHub</title>
-    <link rel="stylesheet" href="global.css">
-</head>
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <!--
+      This HTML file is a template.
+      If you open it directly in the browser, you will see an empty page.
 
-<body>
-    <!--Signed-out-flow--->
-    <!--Signed-in-flow-->
-    <!--Common-->
+      You can add webfonts, meta tags, or analytics to this file.
+      The build step will place the bundled scripts into the <body> tag.
 
-    <aside data-behavior="notification" style="display: none">
-        <a target="_blank" href="https://explorer.testnet.near.org/accounts/"></a>
-        called method: 'set_greeting' in contract:
-        <a target="_blank" href="https://explorer.testnet.near.org/accounts/"></a>
-        <footer>
-            <div><a id="view-transaction" target="_blank" href="https://explorer.testnet.near.org/transactions/">View
-                    transaction</a></div>
-            <div>Just now</div>
-        </footer>
-    </aside>
-
-    <aside data-behavior="waiting-for-transaction" style="display: none">
-        Waiting for transaction...
-    </aside>
-
+      To begin the development, run `npm start` or `yarn start`.
+      To create a production bundle, use `npm run build` or `yarn build`.
+    -->
     <script src="./index.js"></script>
-</body>
-
+  </body>
 </html>
